# vectordb-benchmark

./: .gitignore  Makefile  README.md  pyproject.toml
client/pgvecto.rs/: client.py
dataset/: reader.py  source.py
docker/: compose.pgvecto_rs.yaml  compose.pgvector.yaml  compose.qdrant.yaml
server/pgvecto.rs/: compose.yaml
server/pgvector/: compose.yaml
spec/: vector.py
vector_bench/: args.py  bench.py  main.py  spec.py
vector_bench/client/: __init__.py  base.py  pgvecto_rs.py  pgvector.py  qdrant.py
vector_bench/client/pgvecto.rs/: client.py
vector_bench/client/pgvecto_rs/: client.py
vector_bench/dataset/: __init__.py  base.py  hdf5.py  pseudo.py  source.py
