[project]
name = "vectordb-benchmark"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
    "msgspec~=0.18.5",
    "h5py~=3.10.0",
    "numpy~=1.26.3",
    "tqdm~=4.66",
    "httpx",
]
[project.optional-dependencies]
dev = [
    "ruff~=0.1.3",
    "pytest~=7.4",
]
pgvectors = [
    "psycopg[binary]",
]
[project.urls]
"Homepage" = "https://github.com/tensorchord/vectordb-benchmark"
[build-system]
requires = ["setuptools", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"
[project.scripts]
"vector_bench" = "vector_bench.main:main"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
target-version = "py38"
[tool.ruff.lint]
select = ["E", "F", "G", "B", "I", "SIM", "TID", "PL", "RUF"]
ignore = ["E501"]
[tool.ruff.lint.isort]
known-first-party = ["argstruct"]
[tool.ruff.pylint]
max-args = 7
